# Zenith

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  todo.md
CubeGame/: CMakeLists.txt
CubeGame/src/: Block.cpp  Block.hpp  CubeGame.cpp  CubeGame.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  cube_game.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  Sandbox.hpp  Scene.cpp  Scene.hpp  main.cpp
Sandbox/src/shaders/: rect.frag  rect.vert  test.frag  test.vert
Testbed/: CMakeLists.txt
Testbed/src/: ContainersScene.cpp  ContainersScene.hpp  Embedded.cpp  MainScene.cpp  MainScene.hpp  Scene.cpp  Testbed.cpp  Testbed.hpp  TransformTest.cpp  TransformTest.hpp  main_scene.cpp  main_scene.hpp
UnitTester/: CMakeLists.txt
UnitTester/src/: Cleanup.cpp  InPlaceVector.cpp  LifetimeHelper.hpp  Matchers.hpp  ScopeGuard.cpp  ShaderPreprocessor.cpp  String.cpp  StringHasher.cpp  Test.cpp  shader_preprocessor.cpp
Zenith/: .clang-format  CMakeLists.txt
Zenith/ImGui/: CMakeLists.txt
Zenith/include/Zenith/: Core.hpp  Test.hpp  Zenith.hpp  fwd.hpp
Zenith/include/Zenith/Core/: Application.hpp  Assert.hpp  AssetManager.hpp  Camera.hpp  CameraController.hpp  Core.hpp  Engine.hpp  Entity.hpp  Error.hpp  EventListener.hpp  Exception.hpp  Scene.hpp  SceneManager.hpp  SystemManager.hpp  Transformable.hpp  Updatable.hpp  asset_manager.hpp  fwd.hpp  scene_manager.hpp  system_manager.hpp
Zenith/include/Zenith/Debug/: Debug.hpp
Zenith/include/Zenith/Filesystem/: File.hpp  Filesystem.hpp
Zenith/include/Zenith/Graphics/: Camera.hpp  Colors.hpp  DrawCommand.hpp  Drawable.hpp  (+15 more)
Zenith/src/: Test.cpp  pch.hpp
Zenith/src/Core/: Application.cpp  AssetManager.cpp  Camera.cpp  CameraController.cpp  Engine.cpp  Exception.cpp  SceneManager.cpp  SystemManager.cpp  Transformable.cpp  main.cpp
Zenith/src/Filesystem/: File.cpp
Zenith/src/Graphics/: Camera.cpp  DrawCommand.cpp  ImGuiRenderer.cpp  Light.cpp  Material.cpp  Materials.cpp  Mesh.cpp  Meshes.cpp  Renderer.cpp  Shaders.cpp  imgui_renderer.cpp
Zenith/src/Logging/: Logger.cpp
Zenith/src/Math/: Matrix.cpp  Quaternion.cpp  Vector.cpp
Zenith/src/Platform/: Event.cpp  EventQueue.cpp  Input.cpp  Key.cpp  Mouse.cpp  ShaderPreprocessor.cpp  Window.cpp  shader_preprocessor.cpp
Zenith/src/Time/: Time.cpp
Zenith/src/Utility/: String.cpp
cube_game/: .clang-format  CMakeLists.txt
cube_game/src/: block.cpp  block.hpp  cube_game.cpp  cube_game.hpp  pch.hpp  player.cpp  player.hpp  scene.cpp  scene.hpp
sandbox/: CMakeLists.txt
sandbox/src/: cube_script.cpp  cube_script.hpp  main.cpp  main_layer.cpp  main_layer.hpp  main_scene.cpp  main_scene.hpp  sandbox.cpp  sandbox.hpp  scene.cpp  scene.hpp
testbed/: .clang-format  CMakeLists.txt
testbed/src/: character.cpp  character.hpp  containers.cpp  containers.hpp  containers_scene.cpp  containers_scene.hpp  embedded.cpp  embedded.hpp  main.cpp  main_layer.cpp  main_layer.hpp  main_scene.cpp  main_scene.hpp  pch.hpp  physics.cpp  physics.hpp  sprites.cpp  sprites.hpp  testbed.cpp  testbed.hpp
testbed/src/scripts/: ball_spawner.cpp  ball_spawner.hpp  camera.cpp  camera.hpp  light.cpp  light.hpp
unit_tester/: CMakeLists.txt
unit_tester/src/: defer.cpp  inplace_vector.cpp  matchers.hpp  memory.cpp  pch.hpp  shader_preprocessor.cpp  string.cpp  string_hasher.cpp
unit_tester/src/core/: cast.cpp
unit_tester/src/graphics/: shader_preprocessor.cpp
unit_tester/src/math/: vector.cpp
unit_tester/src/memory/: managed.cpp
unit_tester/src/meta/: type.cpp
unit_tester/src/renderer/: shader_preprocessor.cpp
unit_tester/src/stl/: inplace_vector.cpp  string_algorithm.cpp  string_hasher.cpp  vector.cpp
unit_tester/src/string/: string.cpp
unit_tester/src/util/: meta.cpp  number.cpp
zenith/: .clang-format  CMakeLists.txt
zenith/imgui/: CMakeLists.txt
zenith/include/: zenith.hpp
zenith/include/zenith/: asset.hpp  config.hpp  core.hpp  debug.hpp  ecs.hpp  embedded.hpp  filesystem.hpp  fs.hpp  fwd.hpp  gl.hpp  graphics.hpp  layer.hpp  log.hpp  logging.hpp  math.hpp  memory.hpp  meta.hpp  physics.hpp  platform.hpp  renderer.hpp  script.hpp  stl.hpp  string.hpp  system.hpp  time.hpp  util.hpp  utility.hpp
zenith/src/: pch.hpp
zenith/src/asset/: asset.cpp  asset_manager.cpp
zenith/src/core/: application.cpp  asset_manager.cpp  camera_controller.cpp  exception.cpp  main.cpp  profiler.cpp  random.cpp  scene.cpp  scene_manager.cpp  system_manager.cpp  transform.cpp
zenith/src/debug/: ui.cpp
zenith/src/ecs/: components.cpp  ecs.cpp  entity.cpp
zenith/src/embedded/: shaders.cpp
zenith/src/filesystem/: file.cpp
zenith/src/fs/: file.cpp  fs.cpp
zenith/src/gl/: buffer.cpp  buffer_usage.cpp  context.cpp  debug.cpp  shader.cpp  texture.cpp  texture_params.cpp  vertex_array.cpp  vertex_layout.cpp
zenith/src/graphics/: camera.cpp  draw_command.cpp  imgui_renderer.cpp  light.cpp  materials.cpp  meshes.cpp  renderer.cpp  shader_preprocessor.cpp  shaders.cpp  shape.cpp
zenith/src/layer/: layer.cpp  layers.cpp
zenith/src/log/: formatters.cpp  logger.cpp
zenith/src/logging/: logger.cpp
zenith/src/math/: matrix.cpp  quaternion.cpp
zenith/src/memory/: alloc.cpp  buffer.cpp  temporary_storage.cpp
zenith/src/physics/: layer.cpp  physics.cpp
zenith/src/platform/: event.cpp  event_queue.cpp  input.cpp  key.cpp  shader_preprocessor.cpp  window.cpp
zenith/src/renderer/: camera.cpp  imgui_renderer.cpp  light.cpp  materials.cpp  mesh.cpp  meshes.cpp  primitives.cpp  quad.cpp  renderer.cpp  shader_preprocessor.cpp  shaders.cpp
zenith/src/script/: camera.cpp  camera_controller.cpp  character.cpp  script.cpp
zenith/src/shaders/: zth_defines.glsl  zth_fallback.frag  zth_fallback.vert  zth_flat_color.frag  zth_flat_color.vert  zth_standard.frag  zth_standard.vert  zth_texture_2d.frag  zth_texture_2d.vert
zenith/src/stl/: string.cpp  string_algorithm.cpp
zenith/src/string/: string.cpp
zenith/src/system/: application.cpp  event.cpp  event_queue.cpp  file.cpp  input.cpp  temporary_storage.cpp  time.cpp  window.cpp
zenith/src/time/: time.cpp
(+310 files in other folders)
